[package]
name = "clipper"
version = "0.4.4"
authors = ["insomnimus <insomnimus19@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
clipboard-win = { version = "5.0.0", features = ["std"] }
fs_extra = "1.3.0"
normpath = "1.1.1"
